Placed landing page items inside one container to fix alignment issue on mobile devices.

--- a/client/src/components/Hero/style.css
+++ b/client/src/components/Hero/style.css
@@ -1,5 +1,5 @@
 .hero {
-  height: 700px;
+  height: 675px;
   background-size: cover;
   background-position: center;
   position: relative; 
