--- a/client/src/components/Navbar/style.css
+++ b/client/src/components/Navbar/style.css
@@ -2,6 +2,10 @@
   font-family: 'Quantico', 'Cursive';
 }
 
+.navbar {
+  background-color: rgba(0, 0, 0, 0.8);
+}
+
 button#btn-sm:hover {
   background-color: royalblue;
 }
